fixing css issue when screen was too small

--- a/frontend/src/informations.css
+++ b/frontend/src/informations.css
@@ -26,6 +26,7 @@ iframe {
 	margin-bottom: 1%;
 	min-width: 250px;
 	min-height: 400px;
+	border-radius: 20px;
 }
 
 .rightdiv {
